--- a/src/ShopOnline.Web/Pages/Products.razor
+++ b/src/ShopOnline.Web/Pages/Products.razor
@@ -1,8 +1,6 @@
 ﻿@page "/"
 @inherits ProductsBase
 
-<h3>products</h3>
-
 @if (Products is null)
 {
     <h3>Carregando Produtos ...</h3>
@@ -23,24 +21,7 @@ else
             productRowList = Products.Skip(i * itemPerRow).Take(itemPerRow).ToList();
 
             <div class="row mt-3">
-                @foreach(var item in productRowList)
-                {
-                    <div class="col-md-3 mb-2">
-                        <a href="#">
-                            <div class="card">
-                                <img class="img-thumbnail" src="@item.ImageUrl">
-
-                                <div class="card-body">
-                                    <h5 class="card-title mb-3">@item.Name</h5>
-
-                                    <p class="card-text">@item.Price.ToString("C")</p>
-                                </div>
-                            </div>
-                        </a>
-
-                    </div>
-                }
-
+                <DisplayProducts Products="@productRowList"></DisplayProducts>
             </div>
         }
     }
