--- a/src/ShopOnline.Web/Pages/Products.razor
+++ b/src/ShopOnline.Web/Pages/Products.razor
@@ -11,18 +11,17 @@ else
 
     var productCount = Products.Count();
 
-    @if(productCount > 0)
+    @if (productCount > 0)
     {
-        const int itemPerRow = 4;
-        var productRowList = new List<ProductDto>();
-
-        @for(int i =0; i < productCount; i++)
+        @foreach (var prodGroup in GetGroupedProductsByCategory())
         {
-            productRowList = Products.Skip(i * itemPerRow).Take(itemPerRow).ToList();
+            <h4>@GetCategoryName(prodGroup)</h4>
 
             <div class="row mt-3">
-                <DisplayProducts Products="@productRowList"></DisplayProducts>
+                <DisplayProducts Products="@prodGroup"></DisplayProducts>
             </div>
+            <hr class="mb-3" />
         }
+
     }
 }
