--- a/src/ShopOnline.Web/Pages/Products.razor
+++ b/src/ShopOnline.Web/Pages/Products.razor
@@ -18,6 +18,9 @@ else
             <h4>@GetCategoryName(prodGroup)</h4>
 
             <div class="row mt-3">
+                @*Exibe apenas uma certa quantidade por categoria*@
+                @*<DisplayProducts Products="@prodGroup.Take(4)"></DisplayProducts>*@
+                
                 <DisplayProducts Products="@prodGroup"></DisplayProducts>
             </div>
             <hr class="mb-3" />
