--- a/src/ShopOnline.Web/Pages/ProductDetails.razor
+++ b/src/ShopOnline.Web/Pages/ProductDetails.razor
@@ -7,7 +7,7 @@
 }
 else if(ErrorMessage is not null)
 {
-    <h3 class="text-danger">@ErrorMessage</h3>
+  <DisplayError ErrorMessage="@ErrorMessage"></DisplayError>
 }
 else
 {
