--- a/src/ShopOnline.Web/Pages/ShoppingCart.razor
+++ b/src/ShopOnline.Web/Pages/ShoppingCart.razor
@@ -26,9 +26,16 @@ else
                         <div class="col-md-8">
                             <h5>@item.Name</h5>
                             <div class="mb-4">@item.Description</div>
-                            <span>Price: <strong>@item.Price.ToString("C")</strong></span>
+                            <span>
+                                Price: <strong>@item.Price.ToString("C")</strong>
+                                <input type="number" @bind="@item.Qty">
+                                <button class="btn btn-info btn-sm" 
+                                @onclick="() => UpdateQtyCartItem_Click(item.Id, item.Qty)">
+                                    <i class="fa fa-refresh"></i>
+                                </button>
+                            </span>
                             <div>
-                                <button @onclick="() => DeleteCartItem_Clicked(item.Id)"
+                            <button @onclick="() => DeleteCartItem_Clicked(item.Id)"
                             class="btn btn-danger sm">
                                     <i class="fa fa-trash"></i>
                                 </button>
@@ -40,7 +47,7 @@ else
             <div class="col-md-3">
                 <h5>Cart Summary</h5>
                 <div class="mt-2">
-                    <div>Total -</div>
+                    <div>Total - (@TotalQty items)&nbsp;<strong>@TotalPrice</strong></div>
                     <a href="#" class="btn btn-success">
                         <span class="oi oi-credit-card"></span>&nbsp; Proceed To Check
                     </a>
