--- a/src/ShopOnline.Web/Pages/ShoppingCart.razor
+++ b/src/ShopOnline.Web/Pages/ShoppingCart.razor
@@ -28,8 +28,8 @@ else
                             <div class="mb-4">@item.Description</div>
                             <span>
                                 Price: <strong>@item.Price.ToString("C")</strong>
-                                <input type="number" @bind="@item.Qty">
-                                <button class="btn btn-info btn-sm" 
+                                <input @oninput="() => UpdateQty_Input(item.Id)" type="number" @bind="@item.Qty">
+                                <button data-itemId="@item.Id" class="btn btn-info btn-sm update-qty" 
                                 @onclick="() => UpdateQtyCartItem_Click(item.Id, item.Qty)">
                                     <i class="fa fa-refresh"></i>
                                 </button>
