--- a/src/ShopOnline.Web/Shared/NavMenu.razor
+++ b/src/ShopOnline.Web/Shared/NavMenu.razor
@@ -1,4 +1,7 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@implements IDisposable
+@inject IShoppingCartService shoppingCartService
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Shop Online Blazor</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -24,9 +27,9 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>*@
-        <div class="nav-item px-3">
+        <div class="nav-item px-3 d-sm-none">
             <NavLink class="nav-link" href="shoppingCart">
-                <span class="oi oi-cart" aria-hidden="true"></span> Shopping Cart
+                <span class="oi oi-cart" aria-hidden="true"></span> Shopping Cart (<b>@ShoppingCartItemsCount</b>)
             </NavLink>
         </div>
     </nav>
@@ -37,8 +40,26 @@
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
+    private int ShoppingCartItemsCount = 0;
+
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    protected override void OnInitialized()
+    {
+        shoppingCartService.OnShoppingCartChanged += ShoppingCartChanged;
+    }
+
+    private void ShoppingCartChanged(int totalQty)
+    {
+        ShoppingCartItemsCount = totalQty;
+        StateHasChanged();
+    }
+
+    void IDisposable.Dispose()
+    {
+        shoppingCartService.OnShoppingCartChanged -= ShoppingCartChanged;
     }
 }
